# androidNativeBundle

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  publish_java.gradle  publish_lib.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/myapplication/: MainActivity.java  MyApp.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  common.h  myapp.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
buildSrc/: build.gradle
buildSrc/src/main/groovy/com/yy/android/gradle/nativedepend/: GradleApiAdapter.groovy  NativeBundleExportExtension.groovy  NativeBundleExportPlugin.groovy  NativeBundleImportExtension.groovy  NativeBundleImportPlugin.groovy
buildSrc/src/main/groovy/com/yy/android/gradle/nativedepend/util/: DependenciesUtils.groovy
buildSrc/src/main/groovy/com/yy/android/gradle/ndkdebug/: NdkDebugHelper.groovy
gradle/wrapper/: gradle-wrapper.properties
mylib/: build.gradle
mylib/src/main/: AndroidManifest.xml
mylib/src/main/java/com/yy/android/nativeBundlePlugin/: Mylib.java
mylib/src/main/jni/: Android.mk  common.h  mylib.cpp
mylib/src/main/jni/include/: mylib.h
mylib/src/main/res/values/: strings.xml
mylibrary2/: build.gradle
mylibrary2/src/main/: AndroidManifest.xml
mylibrary2/src/main/java/com/howard/mylibrary2/: MyLib2.java
mylibrary2/src/main/res/values/: strings.xml
